salesforce_sfdx/main/default/objects/Quote/fields/aiesync__Easy_Synced__c.field-meta.xml
<CustomField>
    <fullName>aiesync__Easy_Synced__c</fullName>
    <formula>Id=Opportunity.aiesync__Easy_Sync_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Easy Synced</label>
    <type>Checkbox</type>
</CustomField>