salesforce_sfdx/main/default/objects/Quote/fields/aiesync__TestCustomField_Q__c.field-meta.xml
<CustomField>
    <fullName>aiesync__TestCustomField_Q__c</fullName>
    <label>TestCustomField_Q</label>
    <length>255</length>
    <type>Text</type>
</CustomField>