salesforce_sfdx/main/default/objects/Quote/fields/Cargo_por_Uso__c.field-meta.xml
<CustomField>
    <fullName>Cargo_por_Uso__c</fullName>
    <label>Cargo por Uso</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>