salesforce_sfdx/main/default/objects/Quote/fields/Cargo_Volumetrico__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Volumetrico__c</fullName>
    <label>Cargo Volumétrico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>