salesforce_sfdx/main/default/objects/Quote/fields/Clasificacion_Tarifaria__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_Tarifaria__c</fullName>
    <label>Clasificacion Tarifaria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>