salesforce_sfdx/main/default/objects/Quote/fields/Consumo_total_esperado_MWh__c.field-meta.xml
<CustomField>
    <fullName>Consumo_total_esperado_MWh__c</fullName>
    <formula>(  OSFCL_Consumo_MWh_ano__c  / 12 )  *  OSFMX_TimeLimitSupply__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo total esperado (MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>