salesforce_sfdx/main/default/objects/Quote/fields/Garantia_Costo_Molecula_estimado__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Costo_Molecula_estimado__c</fullName>
    <label>Garantia Costo Molecula estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>