salesforce_sfdx/main/default/objects/Quote/fields/Garantia_IVA__c.field-meta.xml
<CustomField>
    <fullName>Garantia_IVA__c</fullName>
    <label>Garantia IVA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>