salesforce_sfdx/main/default/objects/Quote/fields/Garantia_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Subtotal__c</fullName>
    <label>Garantia Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>