salesforce_sfdx/main/default/objects/Quote/fields/Garantia_Total__c.field-meta.xml
<CustomField>
    <fullName>Garantia_Total__c</fullName>
    <label>Garantia Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>