salesforce_sfdx/main/default/objects/Quote/fields/Image_vId__c.field-meta.xml
<CustomField>
    <fullName>Image_vId__c</fullName>
    <label>Image_vId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>