salesforce_sfdx/main/default/objects/Quote/fields/ImageLogotipo__c.field-meta.xml
<CustomField>
    <fullName>ImageLogotipo__c</fullName>
    <formula>IMAGE(Image_vId__c, "Logotipo", 120, 120)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Compañia</label>
    <type>Text</type>
</CustomField>