salesforce_sfdx/main/default/objects/Quote/fields/Importe_de_la_garantia__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_la_garantia__c</fullName>
    <label>Importe de la garantia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>