salesforce_sfdx/main/default/objects/Quote/fields/Indice__c.field-meta.xml
<CustomField>
    <fullName>Indice__c</fullName>
    <label>Indice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VPM</fullName>
            </value>
            <value>
                <fullName>HSCH</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>