salesforce_sfdx/main/default/objects/Quote/fields/Meses_de_mayor_consumo__c.field-meta.xml
<CustomField>
    <fullName>Meses_de_mayor_consumo__c</fullName>
    <label>Meses de mayor consumo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>