salesforce_sfdx/main/default/objects/Quote/fields/Modalidad_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_de_contrato__c</fullName>
    <label>Modalidad de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pago lo generado + c/s neteo de energía</fullName>
            </value>
            <value>
                <fullName>Pago lo demandado</fullName>
            </value>
            <value>
                <fullName>Pago lo contratado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>