salesforce_sfdx/main/default/objects/Quote/fields/Nivel_de_tension__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_tension__c</fullName>
    <label>Nivel de tensión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>STN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>