salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Base_referencia_precio__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Base_referencia_precio__c</fullName>
    <label>Base Referencia Precio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brent</fullName>
            </value>
            <value>
                <fullName>Sustituto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>