salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Capacidad_Almacenamiento__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Capacidad_Almacenamiento__c</fullName>
    <label>Capacidad Almacenamiento GNL (M3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>