salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Capacidad_Regasificacion__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Capacidad_Regasificacion__c</fullName>
    <label>Capacidad Regasificación (NM3/H)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>