salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Consumo_MMBTUAno__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Consumo_MMBTUAno__c</fullName>
    <inlineHelpText>MMBTU / Año</inlineHelpText>
    <label>Consumo (MMBTU/Año)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>