salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Consumo_MWh_ano__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Consumo_MWh_ano__c</fullName>
    <label>Consumo (MWh/año)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>