salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Duracion_Contrato_Anos__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Duracion_Contrato_Anos__c</fullName>
    <formula>round((OSFCL_Tramo_1__c + OSFCL_Tramo_2__c + OSFCL_Tramo_3__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración Contrato (Años)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>