salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Fecha_Inicio_Suministro_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Fecha_Inicio_Suministro_1__c</fullName>
    <label>Fecha Inicio Suministro 1</label>
    <type>Date</type>
</CustomField>