salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_NPV_Margen_Esperado_MUSD__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_NPV_Margen_Esperado_MUSD__c</fullName>
    <label>NPV Margen Esperado (MUSD)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>