salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Precio_2__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Precio_2__c</fullName>
    <label>Precio 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>