salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Precio_Base__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Precio_Base__c</fullName>
    <inlineHelpText>USD/MMBTU</inlineHelpText>
    <label>Precio Base</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>