salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Precio_Promedio_Contrato__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Precio_Promedio_Contrato__c</fullName>
    <formula>(ROUND(OSFCL_Tramo_1__c  * OSFCL_Precio_1__c,0)+ROUND(OSFCL_Tramo_2__c  * OSFCL_Precio_2__c,0)+ROUND(OSFCL_Tramo_3__c  * OSFCL_Precio_3__c,0))/(round((OSFCL_Tramo_1__c + OSFCL_Tramo_2__c + OSFCL_Tramo_3__c),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Promedio Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>