salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Punto_de_Medicion_2__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Punto_de_Medicion_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto de Medición 2</label>
    <referenceTo>OSFCL_Barra_de_transmision__c</referenceTo>
    <relationshipLabel>Ofertas (Punto de Medición 2)</relationshipLabel>
    <relationshipName>Ofertas5</relationshipName>
    <type>Lookup</type>
</CustomField>