salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Punto_de_Medicion_3__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Punto_de_Medicion_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto de Medición 3</label>
    <referenceTo>OSFCL_Barra_de_transmision__c</referenceTo>
    <relationshipLabel>Ofertas (Punto de Medición 3)</relationshipLabel>
    <relationshipName>Ofertas6</relationshipName>
    <type>Lookup</type>
</CustomField>