salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Punto_Suministro_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Punto_Suministro_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto Suministro 1</label>
    <referenceTo>OSFCL_Barra_de_transmision__c</referenceTo>
    <relationshipLabel>Ofertas</relationshipLabel>
    <relationshipName>Ofertas</relationshipName>
    <type>Lookup</type>
</CustomField>