salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Punto_Suministro_2__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Punto_Suministro_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto Suministro 2</label>
    <referenceTo>OSFCL_Barra_de_transmision__c</referenceTo>
    <relationshipLabel>Ofertas (Punto de Suministro 2)</relationshipLabel>
    <relationshipName>Ofertas1</relationshipName>
    <type>Lookup</type>
</CustomField>