salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Take_or_Pay__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Take_or_Pay__c</fullName>
    <label>Take Or Pay</label>
    <length>10</length>
    <type>Text</type>
</CustomField>