salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Tarifa_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tarifa_Proveedor__c</fullName>
    <label>Tarifa Proveedor</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>