salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Tramo_1__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tramo_1__c</fullName>
    <formula>IF(OR(ISBLANK(OSFCL_Fecha_Inicio_Suministro_1__c),ISBLANK(OSFCL_Fecha_Termino_Suministro_1__c)),0,(OSFCL_Fecha_Termino_Suministro_1__c - OSFCL_Fecha_Inicio_Suministro_1__c)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tramo 1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>