salesforce_sfdx/main/default/objects/Quote/fields/OSFCL_Validador_Datos__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Validador_Datos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validador Datos</label>
    <type>Checkbox</type>
</CustomField>