salesforce_sfdx/main/default/objects/Quote/fields/OSFCO_Antiguedad_Oferta__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Antiguedad_Oferta__c</fullName>
    <formula>TODAY() -  OSFMX_OfferDeliveryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antigüedad Oferta (Días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>