salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_AcceptDays__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AcceptDays__c</fullName>
    <label>Días Aceptada</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>