salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_AccountRFC__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountRFC__c</fullName>
    <formula>Opportunity.Account.OSFMX_RFC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFC</label>
    <type>Text</type>
</CustomField>