salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_AccountSector__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountSector__c</fullName>
    <formula>TEXT(Opportunity.Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>