salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ActualPrice__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ActualPrice__c</fullName>
    <label>Precio Actual</label>
    <length>60</length>
    <type>Text</type>
</CustomField>