salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_AdditionalServices__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AdditionalServices__c</fullName>
    <label>Servicios adicionales a contratar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribución</fullName>
            </value>
            <value>
                <fullName>Usos propios</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
            <value>
                <fullName>GNC</fullName>
            </value>
            <value>
                <fullName>Autotransporte</fullName>
            </value>
            <value>
                <fullName>Coberturas</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
                <isActive>false</isActive>
                <label>Ninguno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>