salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Amount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Amount__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>