salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_apellidousuariofertagas__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_apellidousuariofertagas__c</fullName>
    <label>Apellido de usuario oferta gas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>