salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ApplicableTransportRate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ApplicableTransportRate__c</fullName>
    <label>Tarifa Transporte Aplicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zona 3  Zona 1</fullName>
            </value>
            <value>
                <fullName>Zona 3  Zona 2</fullName>
            </value>
            <value>
                <fullName>Zona 3  Zona 3</fullName>
            </value>
            <value>
                <fullName>Zona 3  Zona 4</fullName>
            </value>
            <value>
                <fullName>Zona 3  Zona 5</fullName>
            </value>
            <value>
                <fullName>Zona 3  Zona 6</fullName>
            </value>
            <value>
                <fullName>Zona 3  Zona 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>