salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Assignedto__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Assignedto__c</fullName>
    <defaultValue>&quot;Mónica Huesca Reyes&quot;</defaultValue>
    <label>Asignado a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mónica Huesca Reyes</fullName>
                <default>true</default>
                <label>Mónica Huesca Reyes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>