salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_AuthorizationVPSupply__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AuthorizationVPSupply__c</fullName>
    <label>Autorización VP Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Aprobación</fullName>
            </value>
            <value>
                <fullName>Autorizada</fullName>
            </value>
            <value>
                <fullName>Revisión Necesaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>