salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Autorizada__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Autorizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para estados de procesos de aprobación de presupuestos.</description>
    <label>Autorizada (por Supply)</label>
    <type>Checkbox</type>
</CustomField>