salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_B2BApprover__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_B2BApprover__c</fullName>
    <formula>IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución CMG"), "Alberto García",
IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución NGM"), "Alejandro Quintanilla",
IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución TMG"), "Alejandro Quintanilla",

IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución DGJ"), "Arturo Magaña",
IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "DGJ-Bajio"), "Arturo Magaña",
IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución DGQ"), "Alberto García",
IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución GNP-Mérida"), "Álvaro Ramírez",
IF (
ISPICKVAL(OSFMX_DistributorOrCarrier__c, "Distribución GNP"), "Álvaro Ramírez",
"N/A"
))))))))</formula>
    <label>Gerente B2B Aprobador</label>
    <type>Text</type>
</CustomField>