salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_BoxNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BoxNumber__c</fullName>
    <label>No caseta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>