salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_BoxType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BoxType__c</fullName>
    <label>Tipo de Caseta</label>
    <type>TextArea</type>
</CustomField>