salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessLine__c</fullName>
    <label>Giro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1,</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>