salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_BusinessName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessName__c</fullName>
    <formula>Opportunity.Account.OSFMX_BusinessName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razón Social</label>
    <type>Text</type>
</CustomField>