salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CheckManualRejected__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CheckManualRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag para saber si la oferta es rechazada manualmente por el KAM</description>
    <label>Rechazo Manual</label>
    <type>Checkbox</type>
</CustomField>