salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CloseDays__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CloseDays__c</fullName>
    <description>Dias de cambio de estado a oferta Cerrada Vencida</description>
    <label>Días a Cerrada Vencida</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>