salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ClosedLossOpp__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedLossOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad Cerrada Perdida</label>
    <type>Checkbox</type>
</CustomField>