salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ClosedOpp__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedOpp__c</fullName>
    <formula>Opportunity.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cerrada Oportunidad</label>
    <type>Checkbox</type>
</CustomField>