salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ClosedWonComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedWonComments__c</fullName>
    <label>Comentarios de cierre ganado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>