salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ClosedWonOpp__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosedWonOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad Cerrada Ganada</label>
    <type>Checkbox</type>
</CustomField>