salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ConnectionPipeline__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ConnectionPipeline__c</fullName>
    <label>Ducto de conexión</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OSFMX_SolutionType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribución Regulada</fullName>
            </value>
            <value>
                <fullName>GNC</fullName>
            </value>
            <value>
                <fullName>Directo al ducto de Transportista</fullName>
            </value>
            <value>
                <fullName>Autotransportista</fullName>
            </value>
            <value>
                <fullName>Usos propios</fullName>
            </value>
            <value>
                <fullName>Distribución convencional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>