salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ConnectionType__c</fullName>
    <label>Tipo de conexión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conexion Estandar</fullName>
                <label>Conexión Estándar</label>
            </value>
            <value>
                <fullName>Conexion Estandar + No Estandar</fullName>
                <label>Conexión Estándar + No Estándar</label>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>