salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ConsumptionNaturalGas__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ConsumptionNaturalGas__c</fullName>
    <inlineHelpText>Consumo por Mes</inlineHelpText>
    <label>Consumo de gas natural por plazo forzoso</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>