salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ConsumptionOtherFuels__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ConsumptionOtherFuels__c</fullName>
    <label>Consumo de otros combustibles</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>