salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Contact__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Contact__c</fullName>
    <formula>Opportunity.OSFMX_Contact__r.FirstName+' '+Opportunity.OSFMX_Contact__r.vlocity_cmt__MiddleName__c+' '+Opportunity.OSFMX_Contact__r.LastName</formula>
    <label>Contacto principal</label>
    <type>Text</type>
</CustomField>