salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_ContractType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractType__c</fullName>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renovación</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>