salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Coordinates__c</fullName>
    <label>Coordenadas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>