salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CostNoStandardConnection__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CostNoStandardConnection__c</fullName>
    <label>Costo de conexión no estandar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>