salesforce_sfdx/main/default/objects/Quote/fields/OSFMX_CostStandardConnection__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CostStandardConnection__c</fullName>
    <label>Costo de conexión estandar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>